@@ -1,6 +1,6 @@
 {
   "name": "simp-dconf",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "author": "SIMP Team",
   "summary": "Provides an interface to system DConf configuration",
   "license": "Apache-2.0",
@@ -16,6 +16,10 @@
     {
       "name": "simp/simplib",
       "version_requirement": ">= 3.1.0 < 5.0.0"
+    },
+    {
+      "name": "simp/simp_options",
+      "version_requirement": ">= 1.6.1 < 2.0.0"
     },
     {
       "name": "puppetlabs/stdlib",
